--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 authors = ["George Madrid <gmadrid@gmail.com>"]
 
 [dependencies]
-cv = { git = "https://github.com/nebgnahz/cv-rs.git" }:x
+clap = "*"
+image = "*"
 
