--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["George Madrid <gmadrid@gmail.com>"]
 
 [dependencies]
-clap = "*"
-image = "*"
+clap = "2.32.0"
+image = "0.20.0"
+lazy_static = "1.1.0"
+subprocess = "0.1.17"
+walkdir = "2.2.5"
 
