--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ lazy_static = "1.1.0"
 subprocess = "0.1.17"
 walkdir = "2.2.5"
 
+[dependencies.img_hash]
+version = "2.0"
+# For interop with 'image':
+features = ["rust-image"]
