--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ authors = ["George Madrid <gmadrid@gmail.com>"]
 
 [dependencies]
 clap = "2.32.0"
+console = "0.6.2"
 image = "0.19.0"
+indicatif = "0.9.0"
 lazy_static = "1.1.0"
 subprocess = "0.1.17"
 walkdir = "2.2.5"
