--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["George Madrid <gmadrid@gmail.com>"]
 [dependencies]
 clap = "2.32.0"
 console = "0.6.2"
+either = "1.5.0"
 image = "0.19.0"
 indicatif = "0.9.0"
 lazy_static = "1.1.0"
