--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ either = "1.5.0"
 image = "0.19.0"
 indicatif = "0.9.0"
 lazy_static = "1.1.0"
+# This is deprecated, but included by img_hash, so what'cha gonna do.
+rustc-serialize = "0.3.24"
+serde = "1.0"
+serde_derive = "1.0"
 sha2 = "0.8.0"
 subprocess = "0.1.17"
 walkdir = "2.2.5"
