Periodic saving almost works.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ lazy_static = "1.1.0"
 rustc-serialize = "0.3.24"
 serde = "1.0"
 serde_derive = "1.0"
+serde_yaml = "0.8"
 sha2 = "0.8.0"
 subprocess = "0.1.17"
 walkdir = "2.2.5"
