--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ image = "0.19.0"
 indicatif = "0.9.0"
 lazy_static = "1.1.0"
 # This is deprecated, but included by img_hash, so what'cha gonna do.
+bk-tree = "0.3.0"
 rustc-serialize = "0.3.24"
 serde = "1.0"
 serde_derive = "1.0"
